@@ -3,6 +3,12 @@ Imager release history.  Older releases can be found in Changes.old
  - PNG rework
    - improve error reporting
    - add png_interlace, png_bits tags
+   - read paletted images as paletted images, including transparency
+
+  TODO:
+    - flush output
+    - documentation in C code
+    - documentation of new tags, behaviour
 
 Imager 0.90 - unreleased
 ===========
